{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 34,
  "lineage": "fbbae5e5-92cd-249d-c937-6853bfdcd345",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:internet-gateway/igw-048e0a7bea51c6d8d",
            "id": "igw-048e0a7bea51c6d8d",
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_igw"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:loadbalancer/app/wp-alb/f9891062e2c93d7c",
            "arn_suffix": "app/wp-alb/f9891062e2c93d7c",
            "dns_name": "wp-alb-400898233.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:loadbalancer/app/wp-alb/f9891062e2c93d7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wp-alb",
            "security_groups": [
              "sg-0224ff8bb5ae768d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058cf1ee0b2aa8906"
              },
              {
                "subnet_id": "subnet-0f3d7bc4efd4e3132"
              }
            ],
            "subnets": [
              "subnet-058cf1ee0b2aa8906",
              "subnet-0f3d7bc4efd4e3132"
            ],
            "vpc_id": "vpc-062f3fe63149620a8",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.sub_pub_1a",
            "aws_subnet.sub_pub_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:listener/app/wp-alb/f9891062e2c93d7c/f6578360d32abd37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:targetgroup/wp-dev-alb-tg-http/83ec36254655a11a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:listener/app/wp-alb/f9891062e2c93d7c/f6578360d32abd37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:loadbalancer/app/wp-alb/f9891062e2c93d7c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.elb",
            "aws_lb_target_group.ec2_http",
            "aws_security_group.elb",
            "aws_subnet.sub_pub_1a",
            "aws_subnet.sub_pub_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:targetgroup/wp-dev-alb-tg-http/83ec36254655a11a",
            "arn_suffix": "targetgroup/wp-dev-alb-tg-http/83ec36254655a11a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:049405057902:targetgroup/wp-dev-alb-tg-http/83ec36254655a11a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wp-dev-alb-tg-http",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae1e3dbdcf5ab198",
            "owner_id": "049405057902",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_dev_db_pri_rt"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0909f0941b42dcc8c",
            "owner_id": "049405057902",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048e0a7bea51c6d8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_dev_pub_rt"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_db_pri_1a_rt_assocication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0403622f90070841a",
            "route_table_id": "rtb-0ae1e3dbdcf5ab198",
            "subnet_id": "subnet-096cd96f1afbfe034"
          },
          "dependencies": [
            "aws_route_table.db_pri_rt",
            "aws_subnet.sub_db_pri_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_db_pri_1c_rt_assocication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0905de97ae877311d",
            "route_table_id": "rtb-0ae1e3dbdcf5ab198",
            "subnet_id": "subnet-0fd818aafe509cad4"
          },
          "dependencies": [
            "aws_route_table.db_pri_rt",
            "aws_subnet.sub_db_pri_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_pub_1a_rt_assocication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f816438f326bc3c7",
            "route_table_id": "rtb-0909f0941b42dcc8c",
            "subnet_id": "subnet-058cf1ee0b2aa8906"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub_pub_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_pub_1c_rt_assocication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d1acf78fb9098d",
            "route_table_id": "rtb-0909f0941b42dcc8c",
            "subnet_id": "subnet-0f3d7bc4efd4e3132"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub_pub_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:security-group/sg-0418aa45272d17552",
            "description": "wp_dev_sg_ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0418aa45272d17552",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0224ff8bb5ae768d9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg_ec2",
            "name_prefix": "",
            "owner_id": "049405057902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_dev_sg_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:security-group/sg-0496b4fc3b836d6bf",
            "description": "wp_dev_sg_efs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0496b4fc3b836d6bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0418aa45272d17552"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "wp_dev_sg_efs",
            "name_prefix": "",
            "owner_id": "049405057902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_dev_sg_efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:security-group/sg-0224ff8bb5ae768d9",
            "description": "wp_dev_sg_alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0224ff8bb5ae768d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg_alb",
            "name_prefix": "",
            "owner_id": "049405057902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_dev_sg_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:security-group/sg-05d5d5a136d7a7f21",
            "description": "wp_dev_sg_rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d5d5a136d7a7f21",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0418aa45272d17552"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_dev_sg_rds",
            "name_prefix": "",
            "owner_id": "049405057902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp_dev_sg_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1550833678",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0418aa45272d17552",
            "self": false,
            "source_security_group_id": "sg-0224ff8bb5ae768d9",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.elb",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2602023233",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0418aa45272d17552",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_db_pri_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:subnet/subnet-096cd96f1afbfe034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-096cd96f1afbfe034",
            "map_public_ip_on_launch": false,
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_sub_db_pri_1a"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_db_pri_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:subnet/subnet-0fd818aafe509cad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0fd818aafe509cad4",
            "map_public_ip_on_launch": false,
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_sub_db_pri_1c"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:subnet/subnet-058cf1ee0b2aa8906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-058cf1ee0b2aa8906",
            "map_public_ip_on_launch": true,
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_sub_pub_1a"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:subnet/subnet-0f3d7bc4efd4e3132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f3d7bc4efd4e3132",
            "map_public_ip_on_launch": true,
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_sub_pub_1c"
            },
            "vpc_id": "vpc-062f3fe63149620a8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:049405057902:vpc/vpc-062f3fe63149620a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097b36683e4d16efb",
            "default_route_table_id": "rtb-0afc71a26cd57c0c3",
            "default_security_group_id": "sg-092eec959ac246a6d",
            "dhcp_options_id": "dopt-5e266c39",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-062f3fe63149620a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0afc71a26cd57c0c3",
            "owner_id": "049405057902",
            "tags": {
              "Name": "wp_dev_vpc"
            }
          }
        }
      ]
    }
  ]
}